# grok2api

./: .gitignore  Dockerfile  config.defaults.toml  docker-compose.build.yml  main.py  pyproject.toml  pytest.ini  readme.md
.github/workflows/: cloudflare-workers.yml  docker-image.yml
app/core/: auth.py  compression.py  config.py  exceptions.py  logger.py  response_middleware.py  storage.py
app/services/: api_keys.py  quota.py  request_stats.py
docs/: README.en.md
scripts/: debug_signup.py
src/: auth.ts  settings.ts
src/durable/: autoRegisterJob.ts
src/grok/: models.ts
src/repo/: apiKeys.ts  (+1 more)
tests/: test_account_settings_refresh.py  test_admin_login_api_key_resolution.py  test_admin_token_nsfw_refresh.py  test_admin_tokens_refresh.py  test_admin_tokens_update_auto_trigger.py  test_asset_fetch_ssrf.py  test_auto_register_manager.py  test_chat_prompt_token_count.py  test_chat_retry_on_non_200.py  test_chat_stream_default.py  test_email_service_dns_retry.py  test_favicon_route.py  test_files_path_safety.py  test_image_token_reservation.py  test_imagine_ws_api.py  test_model_service.py  test_openai_processor_ids.py  test_register_runner_errors.py  test_register_runner_redirect.py  test_request_stats_close.py  test_response_middleware_auto_ban.py  test_response_middleware_proxy_headers.py  test_sql_storage_mysql_schema.py  test_token_manager_close.py  test_token_manager_record_fail.py  test_token_manager_reservation.py  test_token_manager_save_task_shutdown.py  test_token_manager_sync_usage.py  test_usage_sync_backoff.py  test_video_token_reservation.py
(+40 files in other folders)
